--- a/index.html
+++ b/index.html
@@ -84,26 +84,14 @@
             <div class="section_column narrow_content">
                 <h1>CAN'T HELP TAPPING YOUR FEET WHEN YOU HEAR A BEAT? FAMILIAR WITH HEARING "DON'T BE SO DRAMATIC"? SHOULD YOUR SHOWER BALLADS WIN AWARDS?</h1>
                 <p>Introducing Imperial College Musical Theatre Society (MTSoc), host of spectacular shows since 1956. Whether you're hungry for an opportunity to dazzle in the spotlight, jump into the pit as part of our incredible band or work behind the scenes with costume, make-up and tech, MTSoc invites you to join us and find your niche in one of the most exciting societies Imperial has to offer.</p>
-                <div class="content_row">
+                <div class="content_column">
                     <a class="large_button" href="https://www.instagram.com/icmusicaltheatre/" target="_blank" rel="noopener">
                         <img class="icon" src="static/images/symbols/instagram.png" aria-hidden="true">
-                        Instagram
-                    </a>
-                    <a class="large_button" href="https://www.facebook.com/mtsoc/" target="_blank" rel="noopener">
-                        <img class="icon" src="static/images/symbols/facebook.png" aria-hidden="true">
-                        Facebook
+                        Upcoming Shows & Events
                     </a>
                     <a class="large_button" href="https://www.youtube.com/@icumtsoc" target="_blank" rel="noopener">
                         <img class="icon" src="static/images/symbols/youtube.png" aria-hidden="true">
-                        YouTube
-                    </a>
-                    <a class="large_button" href="https://tiktok.com/@icmusicaltheatre" target="_blank" rel="noopener">
-                        <img class="icon" src="static/images/symbols/tiktok.png" aria-hidden="true">
-                        TikTok
-                    </a>
-                    <a class="large_button" href="https://outlook.office365.com/owa/calendar/bdb7057df2024a5297ccedd239921296@imperial.ac.uk/a0e1ff6b20a74ba7be85ad3fa260d31812304272260036422315/calendar.html" target="_blank" rel="noopener">
-                        <img class="icon" src="static/images/symbols/calendar.png" aria-hidden="true">
-                        Upcoming Events
+                        Watch Clips of Past Shows
                     </a>
                     <a class="large_button" href="https://mailman.ic.ac.uk/mailman/listinfo/icu-mtsoc" target="_blank" rel="noopener">
                         <img class="icon" src="static/images/symbols/envelope.png" aria-hidden="true">
@@ -116,12 +104,8 @@
         <!-- SHOWS -->
         <div id="shows" class="section background_section">
             <div class="section_column narrow_content">
-                <h1>Shows</h1>
+                <h1>Our Shows</h1>
                 <p>With an ever expanding number of shows, including the full scale Spring Show, 24 hour musicals and Showcases, alongside great socials, MTSoc is a great way to get involved in something different. Previous shows include <i>Footloose</i>, <i>Legally Blonde</i>, <i>In The Heights</i>, <i>RENT</i>, <i>Sweeney Todd</i> and <i>The Rocky Horror Show</i>. Below you can find a description of all our annual shows.</p>
-                <a class="large_button" href="https://www.facebook.com/mtsoc/events" target="_blank" rel="noopener">
-                    <img class="icon" src="static/images/symbols/facebook.png" aria-hidden="true">
-                    Upcoming shows
-                </a>
             </div>
         </div>
 
@@ -132,10 +116,6 @@
                     <div class="content_item">
                         <h2>Freshers Revue</h2>
                         <p>The cabaret-style Revue show is MTSoc's first production of the year and is designed to welcome newcomers into the society and give everyone a taste of what the MTSoc is about. In addition to the show, which runs towards the end of autumn term, you can expect a variety of social events throughout the year including discounted West End trips, Rockaoke and MTSoc Sports Day. Click below to watch more.</p>
-                        <a class="large_button" href="https://www.youtube.com/watch?v=tfJRwp0K1GE&list=PLu_WDfQrrNerhoTLVaVxamHTzzNNJZx0G" target="_blank" rel="noopener">
-                            <img class="icon" src="static/images/symbols/youtube.png" aria-hidden="true">
-                            Revue 2023
-                        </a>
                     </div>
                     <div class="content_item">
                         <h2>Spring Show</h2>
@@ -151,7 +131,7 @@
                     </div>
                     <div class="content_item">
                         <h2>October show</h2>
-                        <p>The October Show is a small-scale production hosted by members from the previous year to entertain incoming Freshers and give them a taste of what we can do. The show is part of a double bill where MTSoc collaborates with DramSoc (ICU's Drama Society), and is the perfect time for newcomers to get to know each other and the society's existing members.</p>
+                        <p>The October Show is a small-scale production hosted by members from the previous year to entertain incoming Freshers and give them a taste of what we can do. The show is part of a double bill where MTSoc collaborates with <a href="https://dramsoc.org" target="_blank" rel="noopener">DramSoc</a> (ICU's Drama Society), and is the perfect time for newcomers to get to know each other and the society's existing members.</p>
                     </div>
                     <div class="content_item">
                         <h2>Mid-term Cabarets</h2>
@@ -162,12 +142,15 @@
         </div>
 
         <!-- PAST SHOWS -->
-        <div id="past_shows" class="plain_section"></div>
+        <div class="section_column plain_section">
+            <h1>Recent Shows</h1>
+            <div id="shows_grid" class="plain_section"></div>
+        </div>
 
         <!-- COMMITTEE -->
         <div id="committee" class="section plain_section">
             <div class="section_column regular_content">
-                <h1>Committee</h1>
+                <h1>Committee <span class="secondary">24/25</span></h1>
                 <div id="committee_grid" class="content_grid"></div>
             </div>
         </div>
@@ -175,11 +158,11 @@
         <!-- CONTACT -->
         <div id="contact" class="section background_section">
             <div class="section_column narrow_content">
-                <h1>Contact</h1>
+                <h1>Contact Us</h1>
                 <p>We welcome comments and queries and particularly love hearing from audience members. If you would like to stay informed of what is going on within the society then please join our mailing list.</p>
                 <a class="large_button" href="mailto:musical@ic.ac.uk">
                     <img class="icon" src="static/images/symbols/envelope.png" aria-hidden="true">
-                    musical@ic.ac.uk
+                    Contact Us
                 </a>
             </div>
         </div>
@@ -206,6 +189,9 @@
                     <a title="TikTok" href="https://tiktok.com/@icmusicaltheatre" target="_blank" rel="noopener">
                         <img class="icon" src="static/images/symbols/tiktok.png" aria-hidden="true">
                     </a>
+                    <a title="Email" href="mailto:musical@ic.ac.uk">
+                        <img class="icon" src="static/images/symbols/envelope.png" aria-hidden="true">
+                    </a>
                 </div>
                 <div class="content_row">
                     <a title="Imperial College London" href="https://www.imperial.ac.uk" target="_blank" rel="noopener">
@@ -216,7 +202,7 @@
                     </a>
                 </div>
                 <p id="copyright">
-                    MTSoc is part of Imperial College Union which is a <a href="https://register-of-charities.charitycommission.gov.uk/charity-search/-/charity-details/5033166">UK Registered Charity, Number 1151241</a><br>
+                    MTSoc is part of Imperial College Union which is a <a href="https://register-of-charities.charitycommission.gov.uk/charity-search/-/charity-details/5033166" target="_blank" rel="noopener">UK Registered Charity, Number 1151241</a><br>
                     Copyright © 2024 Imperial College Union Musical Theatre Society
                 </p>
             </div>
