--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
         <!-- FEATURE -->
         <!-- This section can be used to advertise upcoming shows -->
         <!-- It displays the show's poster and a link to buy tickets -->
-        <div id="feature" class="section" style="background-image: url('/static/images/posters/hair.jpg');">
+        <!-- <div id="feature" class="section" style="background-image: url('/static/images/posters/hair.jpg');">
             <a id="feature_button" class="large_button" href="/tickets" target="_blank">
                 <img aria-hidden="true" class="icon" src="/static/images/symbols/ticket.png">
                 Tickets
             </a>
-        </div>
+        </div> -->
 
         <!-- ABOUT -->
         <div id="about" class="section plain_section">
@@ -193,6 +193,7 @@
                         <img class="icon" src="/static/images/symbols/envelope.png" aria-hidden="true">
                     </a>
                 </div>
+                <p><a href="/policy">Theatre Ticketing Policy</a></p>
                 <div class="content_row">
                     <a title="Imperial College London" href="https://www.imperial.ac.uk" target="_blank" rel="noopener">
                         <img id="imperial_logo" class="invert" src="/static/images/logos/imperial.png" aria-hidden="true">
@@ -201,7 +202,6 @@
                         <img id="union_logo" class="invert" src="/static/images/logos/union.png" aria-hidden="true">
                     </a>
                 </div>
-                <p><a href="/policy">Theatre Ticketing Policy</a></p>
                 <p id="copyright">
                     MTSoc is part of Imperial College Union which is a <a href="https://register-of-charities.charitycommission.gov.uk/charity-search/-/charity-details/5033166" target="_blank" rel="noopener">UK Registered Charity, Number 1151241</a><br>
                     Copyright © 2025 Imperial College Union Musical Theatre Society
