--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
         
         <!-- Hash #x used to flush caches -->
-        <link rel="stylesheet" href="/static/style.css?v=0">
-        <script src="/static/script.js?v=1"></script>
+        <link rel="stylesheet" href="/static/style.css">
+        <script src="/static/script.js"></script>
 
         <!-- GOOGLE ANALYTICS -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-J4T1FC6CR2"></script>
@@ -114,7 +114,7 @@
                 <div class="content_grid">
                     <div class="content_item">
                         <h2>Freshers Revue</h2>
-                        <p>The cabaret-style Revue show is MTSoc's first production of the year and is designed to welcome newcomers into the society and give everyone a taste of what the MTSoc is about. In addition to the show, which runs towards the end of autumn term, you can expect a variety of social events throughout the year including discounted West End trips, Rockaoke and MTSoc Sports Day. Click below to watch more.</p>
+                        <p>The cabaret-style Revue show is MTSoc's first production of the year and is designed to welcome newcomers into the society and give everyone a taste of what the MTSoc is about. In addition to the show, which runs towards the end of autumn term, you can expect a variety of social events throughout the year including discounted West End trips, Rockaoke and MTSoc Sports Day.</p>
                     </div>
                     <div class="content_item">
                         <h2>Spring Show</h2>
